--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -47,7 +47,7 @@
 
     <div class="w-full flex justify-center resources-container-home">
 
-        <div class="grid grid-cols-6 gap-4">              
+        <div class="grid grid-cols-6 gap-4 container-w980">              
 
             <div class="col-span-4 col-start-2">
                 <div class="w-full">
@@ -145,7 +145,7 @@
                         class="section-header-title"
                         id="deposit-discover-and-reuse-data"
                         >
-                        {{ element_3.title }} - aaa
+                        {{ element_3.title }}
                     </h2>
                 </div>
             </div>
@@ -153,7 +153,7 @@
     </div>
 
     <div class="w-full flex justify-center arche-home-collections-slider ">
-        <div class="grid grid-cols-6 gap-4 ">            
+        <div class="grid grid-cols-6 gap-4 container-w980">            
             <div class="col-span-4 col-start-2">
                 <div class="w-full">
 
