--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -30,7 +30,7 @@
 
     <div class="w-full flex justify-center">
         <div class="container">
-            <div class="grid grid-cols-6 gap-4">
+            <div class="grid grid-cols-6 gap-4 ">
                 <div class="col-span-4 col-start-2">
                     <div class="w-full">
                         <div class="my-12 text-center">
@@ -47,9 +47,9 @@
 
     <div class="w-full flex justify-center resources-container-home">
 
-        <div class="grid grid-cols-6 gap-4 container-w980">              
+        <div class="grid grid-cols-6 gap-4">              
 
-            <div class="col-span-4 col-start-2">
+            <div class="col-span-4 col-start-2 container-w980 ">
                 <div class="w-full">
                     <div class="container">
                         <div class="grid grid-cols-1 sm:grid-cols-3 gap-6 items-stretch">
@@ -153,8 +153,8 @@
     </div>
 
     <div class="w-full flex justify-center arche-home-collections-slider ">
-        <div class="grid grid-cols-6 gap-4 container-w980">            
-            <div class="col-span-4 col-start-2">
+        <div class="grid grid-cols-6 gap-4">            
+            <div class="col-span-4 col-start-2 container-w980">
                 <div class="w-full">
 
                     <div class="container collections-container">
