--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -18,28 +18,24 @@
         </div>
 </div>
 
-<div class="container-fluid bg-white m-0 p-0">
-    
-    <div class="container maxw-980 bg-white padding-bottom24">
-        <div class="row gx-5 justify-content-center">
-            <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center">
-                {{ element_1.video_url }}
-            </div>
-            <div class="col-lg-8 col-xl-7 col-xxl-6">
-                <div class="text-center text-xl-start">
-                    <p class="">
+<div class="w-full flex justify-center bg-white">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="grid grid-cols-6 gap-4">
+                <div class="col-span-3">
+                    {{ element_1.video_url }}
+                </div>
+                <div class="col-span-3">
+                     <p class="">
                         {{ element_1.text }}
                     </p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid bubble-line-container pt-2">
-        <div class="image-wrapper">
-            <img src="/browser/themes/contrib/arche-theme-bs/images/common/bubble-line.png" alt="Bubble line" width="1600" height="36">
-        </div>
-    </div>
 </div>
+
+
 <!-- Element 2 - ACCORDION -->
 
 <div class="container maxw-980 mt-5">
