--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -108,7 +108,7 @@
 
 
 <!-- ELEMENT 3 - BOX -->
-<div class="w-full flex justify-center mission-container-home">
+<div class="w-full flex justify-center">
 
     <div class="grid grid-cols-6 gap-4">     
 
@@ -132,7 +132,7 @@
                         </div>
 
                         <div class="col-span-12 lg:col-span-6 text-center">
-                            <img class="img-fluid mission-main-img" src="/browser/themes/contrib/arche-theme-bs/images/common/Kosten-Nora.png" alt="..." width="523" height="439">
+                            <img class="img-fluid mission-main-img" src="/browser/images/common/Kosten-Nora.png" alt="..." width="523" height="439">
                         </div>
                     </div>
                 </div>
@@ -143,7 +143,17 @@
 </div>
 
 
-
+<details class="group rounded-lg border">
+  <summary class="flex cursor-pointer items-center justify-between p-4">
+    <span class="font-medium">Section title</span>
+    <svg class="h-4 w-4 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor">
+      <path d="M5.23 7.21a.75.75 0 011.06.02L10 10.94l3.71-3.71a.75.75 0 111.08 1.04l-4.25 4.25a.75.75 0 01-1.06 0L5.21 8.27a.75.75 0 01.02-1.06z"/>
+    </svg>
+  </summary>
+  <div class="border-t p-4 text-sm text-neutral-700">
+    Your content here…
+  </div>
+</details>
 
 <!-- ELEMENT 4 four cards -->
 
