--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -36,18 +36,12 @@
 </div>
 <div class="w-full flex justify-center bg-white">
     <div class="w-full bubble-line-container pt-2">
-        <div class="image-wrapper">
-            <img src="/browser/images/common/bubble-line.png" alt="Bubble line" width="1600" height="36">
+        <div class="image-wrapper w-full">
+            <img src="/browser/images/common/bubble-line.png" alt="Bubble line" width="100%" height="36px">
         </div>
     </div>
 </div>
 
-<div class="w-full flex justify-center bg-white">
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-        <div class="rounded-lg border p-4"> {{ element_1.video_url }}</div>
-        <div class="rounded-lg border p-4">  {{ element_1.text }}</div>
-    </div>
-</div>
 
 <!-- Element 2 - ACCORDION -->
 
