--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -206,10 +206,78 @@ AAAA            ::::::::::::::::::::::
         <div class="col-span-4 col-start-2 container-w980">
 
             <div class="flex flex-nowrap gap-6">
-                <div class="w-1/4">Card 1 -4</div>
-                <div class="w-1/4">Card 2 -4 </div>
-                <div class="w-1/4">Card 3 -  4</div>
-                <div class="w-1/4">Card 4 - 4</div>
+                <div class="w-1/4">
+                    <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+                        <div class="mb-6 flex items-center justify-center">
+                            <img class="card-img-top home-resources-images max-w-full h-auto"
+                                 src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
+                                 width="165" height="138">
+                        </div>
+                        <div class="card-body home-resources-body p-4">
+                            <h5 class="card-title mb-3 text-center">
+                                <a class="home-resources-title" href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
+                            </h5>
+                            <p class="card-text home-resources-text">{{ element_4.card_1_text }}</p>
+                            <p class="mt-auto">
+                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
+                            </p>
+                        </div>
+                    </article>
+                </div>
+                <div class="w-1/4">
+                    <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+                        <div class="mb-6 flex items-center justify-center">
+                            <img class="card-img-top home-resources-images max-w-full h-auto"
+                                 src="{{ element_4.card_2_image }}" alt="{{ element_4.card_2_title }}"
+                                 width="165" height="138">
+                        </div>
+                        <div class="card-body home-resources-body p-4">
+                            <h5 class="card-title mb-3 text-center">
+                                <a class="home-resources-title" href="{{ element_4.card_2_url }}">{{ element_4.card_2_title }}</a>
+                            </h5>
+                            <p class="card-text home-resources-text">{{ element_4.card_2_text }}</p>
+                            <p class="mt-auto">
+                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_2_url }}">Show</a>
+                            </p>
+                        </div>
+                    </article>
+                </div>
+                <div class="w-1/4">
+                    <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+                        <div class="mb-6 flex items-center justify-center">
+                            <img class="card-img-top home-resources-images max-w-full h-auto"
+                                 src="{{ element_4.card_3_image }}" alt="{{ element_4.card_3_title }}"
+                                 width="165" height="138">
+                        </div>
+                        <div class="card-body home-resources-body p-4">
+                            <h5 class="card-title mb-3 text-center">
+                                <a class="home-resources-title" href="{{ element_4.card_3_url }}">{{ element_4.card_3_title }}</a>
+                            </h5>
+                            <p class="card-text home-resources-text">{{ element_4.card_3_text }}</p>
+                            <p class="mt-auto">
+                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_3_url }}">Show</a>
+                            </p>
+                        </div>
+                    </article>
+                </div>
+                <div class="w-1/4">
+                    <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+                        <div class="mb-6 flex items-center justify-center">
+                            <img class="card-img-top home-resources-images max-w-full h-auto"
+                                 src="{{ element_4.card_4_image }}" alt="{{ element_4.card_4_title }}"
+                                 width="165" height="138">
+                        </div>
+                        <div class="card-body home-resources-body p-4">
+                            <h5 class="card-title mb-3 text-center">
+                                <a class="home-resources-title" href="{{ element_4.card_4_url }}">{{ element_4.card_4_title }}</a>
+                            </h5>
+                            <p class="card-text home-resources-text">{{ element_4.card_4_text }}</p>
+                            <p class="mt-auto">
+                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_4_url }}">Show</a>
+                            </p>
+                        </div>
+                    </article>
+                </div>
             </div>
 
 
@@ -224,76 +292,16 @@ BBBBB
             <div class="grid grid-cols-4 gap-6 items-stretch">
 
                 <!-- CARD 1 -->
-                <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-                    <div class="mb-6 flex items-center justify-center">
-                        <img class="card-img-top home-resources-images max-w-full h-auto"
-                             src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
-                             width="165" height="138">
-                    </div>
-                    <div class="card-body home-resources-body p-4">
-                        <h5 class="card-title mb-3 text-center">
-                            <a class="home-resources-title" href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
-                        </h5>
-                        <p class="card-text home-resources-text">{{ element_4.card_1_text }}</p>
-                        <p class="mt-auto">
-                            <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
-                        </p>
-                    </div>
-                </article>
+
 
                 <!-- CARD 2 -->
-                <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-                    <div class="mb-6 flex items-center justify-center">
-                        <img class="card-img-top home-resources-images max-w-full h-auto"
-                             src="{{ element_4.card_2_image }}" alt="{{ element_4.card_2_title }}"
-                             width="165" height="138">
-                    </div>
-                    <div class="card-body home-resources-body p-4">
-                        <h5 class="card-title mb-3 text-center">
-                            <a class="home-resources-title" href="{{ element_4.card_2_url }}">{{ element_4.card_2_title }}</a>
-                        </h5>
-                        <p class="card-text home-resources-text">{{ element_4.card_2_text }}</p>
-                        <p class="mt-auto">
-                            <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_2_url }}">Show</a>
-                        </p>
-                    </div>
-                </article>
+
 
                 <!-- CARD 3 -->
-                <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-                    <div class="mb-6 flex items-center justify-center">
-                        <img class="card-img-top home-resources-images max-w-full h-auto"
-                             src="{{ element_4.card_3_image }}" alt="{{ element_4.card_3_title }}"
-                             width="165" height="138">
-                    </div>
-                    <div class="card-body home-resources-body p-4">
-                        <h5 class="card-title mb-3 text-center">
-                            <a class="home-resources-title" href="{{ element_4.card_3_url }}">{{ element_4.card_3_title }}</a>
-                        </h5>
-                        <p class="card-text home-resources-text">{{ element_4.card_3_text }}</p>
-                        <p class="mt-auto">
-                            <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_3_url }}">Show</a>
-                        </p>
-                    </div>
-                </article>
+
 
                 <!-- CARD 4 -->
-                <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-                    <div class="mb-6 flex items-center justify-center">
-                        <img class="card-img-top home-resources-images max-w-full h-auto"
-                             src="{{ element_4.card_4_image }}" alt="{{ element_4.card_4_title }}"
-                             width="165" height="138">
-                    </div>
-                    <div class="card-body home-resources-body p-4">
-                        <h5 class="card-title mb-3 text-center">
-                            <a class="home-resources-title" href="{{ element_4.card_4_url }}">{{ element_4.card_4_title }}</a>
-                        </h5>
-                        <p class="card-text home-resources-text">{{ element_4.card_4_text }}</p>
-                        <p class="mt-auto">
-                            <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_4_url }}">Show</a>
-                        </p>
-                    </div>
-                </article>
+
 
             </div>
         </div>
