--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -207,22 +207,34 @@ AAAA            ::::::::::::::::::::::
 
             <div class="flex flex-nowrap gap-6">
                 <div class="w-1/4">
-                    <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+                    <div class="rounded-2xl bg-white shadow h-full flex flex-col p-8">
+                        <!-- image -->
                         <div class="mb-6 flex items-center justify-center">
-                            <img class="card-img-top home-resources-images max-w-full h-auto"
-                                 src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
-                                 width="165" height="138">
+                            <img
+                                class="card-img-top cards-static-images max-w-full h-auto"
+                                src="https://arche.acdh.oeaw.ac.at/browser/themes/contrib/arche-theme-bs/images/common/card-img-collection-policy.png"
+                                alt="Collection Policy"
+                                loading="lazy"
+                                />
                         </div>
-                        <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3 text-center">
-                                <a class="home-resources-title" href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
+
+                        <!-- body -->
+                        <div class="home-resources-body p-4 flex flex-col">
+                            <h5 class="card-title mb-3">
+                                <a class="block text-left" href="/browser/collection-policy">Collection Policy</a>
                             </h5>
-                            <p class="card-text home-resources-text">{{ element_4.card_1_text }}</p>
-                            <p class="mt-auto">
-                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
+
+                            <p class="card-text home-resources-text text-left">
+                                Scope of collections, evaluation, and storage duration
                             </p>
+
+                            <!-- button at the bottom -->
+                            <div class="mt-auto">
+                                <a class="btn basic-arche-btn home-resources-btn" href="/browser/collection-policy">Show</a>
+                            </div>
                         </div>
-                    </article>
+                    </div>
+
                 </div>
                 <div class="w-1/4">
                     <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
@@ -281,29 +293,6 @@ AAAA            ::::::::::::::::::::::
             </div>
 
 
-        </div>
-    </div>
-</div>
-BBBBB
-<div class="w-full flex justify-center resources-container-home">
-    <div class="grid grid-cols-6 gap-4">
-        <div class="col-span-4 col-start-2 container-w980">
-            <!-- ALWAYS 4 columns -->
-            <div class="grid grid-cols-4 gap-6 items-stretch">
-
-                <!-- CARD 1 -->
-
-
-                <!-- CARD 2 -->
-
-
-                <!-- CARD 3 -->
-
-
-                <!-- CARD 4 -->
-
-
-            </div>
         </div>
     </div>
 </div>
