--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -200,14 +200,14 @@
     </div>
 </div>
 
-AAAA            ::::::::::::::::::::::
+
 <div class="w-full flex justify-center resources-container-home">
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2 container-w980">
 
             <div class="flex flex-nowrap gap-6">
                 <div class="w-1/4">
-                    <div class="rounded-2xl bg-white shadow h-full flex flex-col p-8">
+                    <div class="rounded-2xl bg-white shadow h-full flex flex-col">
                         <!-- image -->
                         <div class="mb-6 flex items-center justify-center">
                             <img
@@ -298,78 +298,4 @@ AAAA            ::::::::::::::::::::::
 </div>
 
 
-
-
-<div class="container maxw-980">
-    <div class="row-fluid">
-        <div class="container ">
-            <div class="row justify-content-center">
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 mb-5">
-                    <div class="card h-100 shadow border-0 d-flex align-items-center justify-content-center">
-                        <img class="card-img-top cards-static-images img-fluid" src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}" width="100%" height="100%">
-                        <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3">
-                                <a class="text-start" href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
-                            </h5>
-                            <p class="card-text home-resources-text text-start">
-                                {{ element_4.card_1_text }}
-                            </p>
-                            <p style="display:contents;">
-                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 mb-5">
-                    <div class="card h-100 shadow border-0 d-flex align-items-center justify-content-center">
-                        <img class="card-img-top cards-static-images img-fluid" src="{{ element_4.card_2_image }}" alt="{{ element_4.card_2_title }}" width="100%" height="100%">
-                        <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3">
-                                <a class="text-start" href="{{ element_4.card_2_url }}">{{ element_4.card_2_title }}</a>
-                            </h5>
-                            <p class="card-text home-resources-text text-start">
-                                {{ element_4.card_2_text }}
-                            </p>
-                            <p style="display:contents;">
-                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_2_url }}">Show</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 mb-5">
-                    <div class="card h-100 shadow border-0 d-flex align-items-center justify-content-center">
-                        <img class="card-img-top cards-static-images img-fluid" src="{{ element_4.card_3_image }}" alt="{{ element_4.card_3_title }}" width="100%" height="100%">
-                        <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3">
-                                <a class="text-start" href="{{ element_4.card_3_url }}">{{ element_4.card_3_title }}</a>
-                            </h5>
-                            <p class="card-text home-resources-text text-start">
-                                {{ element_4.card_3_text }}
-                            </p>
-                            <p style="display:contents;">
-                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_3_url }}">Show</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 mb-5">
-                    <div class="card h-100 shadow border-0 d-flex align-items-center justify-content-center">
-                        <img class="card-img-top cards-static-images img-fluid" src="{{ element_4.card_4_image }}" alt="{{ element_4.card_4_title }}" width="100%" height="100%">
-                        <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3">
-                                <a class="text-start" href="{{ element_4.card_4_url }}">{{ element_4.card_4_title }}</a>
-                            </h5>
-                            <p class="card-text home-resources-text text-start">
-                                {{ element_4.card_4_text }}
-                            </p>
-                            <p style="display:contents;">
-                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_4_url }}">Show</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
