--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -210,33 +210,30 @@
 
             <div class="flex flex-nowrap gap-6">
                 <div class="w-1/4">
-                    <div class="rounded-2xl bg-white shadow h-full flex flex-col">
-                        <!-- image -->
-                        <div class="mb-6 flex items-center justify-center">
-                            <img
-                                class="card-img-top cards-static-images max-w-full h-auto"
-                                src="https://arche.acdh.oeaw.ac.at/browser/themes/contrib/arche-theme-bs/images/common/card-img-collection-policy.png"
-                                alt="Collection Policy"
-                                loading="lazy"
-                                />
-                        </div>
+                    <div class="h-full shadow bg-white flex flex-col border-0">
+  <img
+    class="card-img-top cards-static-images max-w-full h-auto"
+    src="https://arche.acdh.oeaw.ac.at/browser/themes/contrib/arche-theme-bs/images/common/card-img-collection-policy.png"
+    alt="Collection Policy"
+    loading="lazy"
+  />
 
-                        <!-- body -->
-                        <div class="home-resources-body p-4 flex flex-col">
-                            <h5 class="card-title mb-3">
-                                <a class="block text-left" href="/browser/collection-policy">Collection Policy</a>
-                            </h5>
+  <div class="card-body home-resources-body p-4">
+    <h5 class="card-title mb-3">
+      <a class="text-left block" href="/browser/collection-policy">Collection Policy 1</a>
+    </h5>
 
-                            <p class="card-text home-resources-text text-left">
-                                Scope of collections, evaluation, and storage duration
-                            </p>
+    <p class="card-text home-resources-text text-left">
+      Scope of collections, evaluation, and storage duration
+    </p>
 
-                            <!-- button at the bottom -->
-                            <div class="mt-auto">
-                                <a class="btn basic-arche-btn home-resources-btn" href="/browser/collection-policy">Show</a>
-                            </div>
-                        </div>
-                    </div>
+    <!-- display: contents -->
+    <p class="contents">
+      <a class="btn basic-arche-btn home-resources-btn" href="/browser/collection-policy">Show</a>
+    </p>
+  </div>
+</div>
+
 
                 </div>
                 <div class="w-1/4">
